workspaces/diff-engine/src/commands/snapshots/optic_diff_engine__commands__rfc__test__can_handle_end_batch_commit_command__already_ended_batch_result.snap
---
source: workspaces/diff-engine/src/commands/rfc.rs
expression: already_ended_batch_result.unwrap_err()
---
Validation(
    "Command failed validation: batch commit can not have ended yet to end batch commit, \"EndBatchCommit(EndBatchCommit { batch_id: \\\"batch_1\\\" })\"",
)
