workspaces/diff-engine/src/commands/snapshots/optic_diff_engine__commands__rfc__test__can_handle_end_batch_commit_command__new_events.snap
---
source: workspaces/diff-engine/src/commands/rfc.rs
expression: new_events
---
[
    BatchCommitEnded(
        BatchCommitEnded {
            batch_id: "batch_2",
            event_context: None,
        },
    ),
]
